# fastsafetensors

./: .gitignore  .pre-commit-config.yaml  Dockerfile.build  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/scripts/: extract_wheel_deps.py  generate_pypi_index.py
.github/workflows/: build-rocm-wheels.yaml  deploy-pypi-index.yaml  lint.yaml  publish-to-index.yaml  publish.yaml  test-aarch64.yaml  test-paddle.yaml  test-torch.yaml
doc/: overview.md
docs/: amd-perf.md  configuration.md  development.md  overview.md
examples/: a_paddle.safetensors  extract_keys.py  fix_alignment.py  gen.py  load.py  run_auto_loader.py  run_paddle_parallel_cpu.sh  run_paddle_parallel_gpu.sh  run_paddle_parrallel.sh  run_parallel.py  run_reuse_loader.py  run_single.py  run_torch_parrallel.sh  run_unified.py  run_vllm.py  test_parallel.py  test_single.py  test_vllm.py  tgis_weight.py
examples/paddle_case/: b_paddle.safetensors  bh_create_tensor.py  bh_test.sh  gen.py  run_parallel.py  run_parallel_test.py  run_single.py
fastsafetensors/: __init__.py  auto_loader.py  common.py  config.py  cpp.pyi  dlpack.py  ep_slice.py  file_buffer.py  loader.py  parallel_loader.py  st_types.py  tensor_factory.py  threefs_loader.py  unified_loader.py
fastsafetensors/connectors/: tgis_weights.py
fastsafetensors/copier/: __init__.py  base.py  dstorage.py  example_copier.py  gds.py  nogds.py  registry.py  threefs.py  unified.py
fastsafetensors/cpp/: cuda_compat.h  dlfcn.cpp  dstorage.h  dstorage_compat.cpp  dstorage_compat.h  dstorage_reader.cpp  dstorageerr.h  ext.cpp  ext.hpp  gpu_compat.h  mman.cpp
fastsafetensors/frameworks/: __init__.py  _paddle.py  _torch.py  paddle.py  torch.py
perf/: pyproject.toml
perf/fastsafetensors_perf/: perf.py
tests/: conftest.py  fill.c  platform_utils.py  run_distributed_paddle_test.py  smoke_import_cpp.py  sten-collection.json  test_config.py  test_fastsafetensors.py  test_fastsfaetensors.py  test_fp8.py  test_multi.py  test_multi_paddle.py  test_unified_loader.py  test_vllm.py
tests/threefs/: conftest.py  mock_reader.py  test_parallel_threefs.py  test_threefs.py
tests/unit/: conftest.py  platform_utils.py  test_auto_loader.py  test_config.py  test_ep_slice.py  test_fastsafetensors.py  test_multi.py
tests/unit/threefs/: conftest.py  mock_reader.py  test_parallel_threefs.py  test_threefs.py
tests/vllm/: test_vllm.py
