[project]
name = "fastsafetensors"
version = "0.2.2"
description = "High-performance safetensors model loader"
authors = [{name = "Takeshi Yoshimura", email = "tyos@jp.ibm.com"}]
maintainers = [{name = "Takeshi Yoshimura", email = "tyos@jp.ibm.com"}]
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["fastsafetensors", "safetensors", "GDS"]
requires-python = ">= 3.10, < 3.14"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
progress = [
    "tqdm>=4.66.0",
]
test = [
    "torch>=2.5.1",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "transformers>=4.40.2",
    "safetensors>=0.4.0",
    "vllm>=0.8.2"
]
dev = [
    "pre-commit>=3.6.0",
    "black==25.11.0",
    "isort==6.1.0",
    "flake8==7.3.0",
    "mypy==1.19.1"
]
threefs = [
    "fastsafetensor-3fs-reader>=0.3.3",
]

[project.urls]
Repository = "https://github.com/foundation-model-stack/fastsafetensors"

[tool.pytest.ini_options]
filterwarnings = ["ignore:Can't initialize NVML"]

[build-system]
requires = ["setuptools==69.5.1", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
